--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <title>My Website</title>
 </head>
-<body>
-    <h1 class="mt-4 mb-4 container">Job Application</h1>
-    <form class="container">
+<body class="container">
+    <h1 class="mt-4 mb-4">Job Application</h1>
+    <form method="POST" action="/">
         <div class="form-group mb-4">
             <label for="first_name">First Name: </label>
             <input class="form-control" type="text" id="first_name" name="first_name" required>
@@ -28,17 +28,17 @@
         <div id="occupation" class="form-group mb-4 btn-group-vertical">
             <label>Current Occupation: </label>
             <br>
-            <input class="btn-check form-control" type="radio" id="employed" name="occupation" required>
+            <input class="btn-check form-control" type="radio" id="employed" name="occupation" value="employed" required>
             <label class="btn btn-outline-secondary" for="employed">Employed</label>
-            <input class="btn-check form-control" type="radio" id="unemployed" name="occupation" required>
+            <input class="btn-check form-control" type="radio" id="unemployed" name="occupation" value="unemployed" required>
             <label class="btn btn-outline-secondary" for="unemployed">Unemployed</label>
-            <input class="btn-check form-control" type="radio" id="self_employed" name="occupation" required>
-            <label class="btn btn-outline-secondary" for="self_employed">Self Employed</label>
-            <input class="btn-check form-control" type="radio" id="student" name="occupation" required>
+            <input class="btn-check form-control" type="radio" id="self-employed" name="occupation" value="self-employed" required>
+            <label class="btn btn-outline-secondary" for="self-employed">Self Employed</label>
+            <input class="btn-check form-control" type="radio" id="student" name="occupation" value="student" required>
             <label class="btn btn-outline-secondary" for="student">Student</label>
         </div>
         <br>
-        <button class="btn btn-secondary mb-4" type="button">Submit</button>
+        <button class="btn btn-secondary mb-4" type="submit">Submit</button>
     </form>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
